--- a/app/src/main/res/layout/dict_words.xml
+++ b/app/src/main/res/layout/dict_words.xml
@@ -3,18 +3,22 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="A"
-        android:textSize="30dp"/>
+<!--    <TextView-->
+<!--        android:id="@+id/Alpha_sort"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="A"-->
+<!--        android:textSize="30dp"-->
+<!--        android:layout_margin="10dp"-->
+<!--        android:textColor="@color/colorPrimary" />-->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:id="@+id/word_layout"
-        android:elevation="10dp">
+        android:elevation="10dp"
+        >
 
         <TextView
             android:id="@+id/word"
@@ -22,8 +26,7 @@
             android:layout_height="wrap_content"
             android:text="WORD"
             android:textSize="20dp"
-            android:textColor="@color/colorPrimary"
-            android:layout_margin="10dp"/>
+            android:layout_margin="10dp" />
 
 
     </LinearLayout>
