--- a/app/src/main/res/layout/dict_words.xml
+++ b/app/src/main/res/layout/dict_words.xml
@@ -25,7 +25,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20dp"
-            android:layout_margin="10dp" />
+            android:layout_margin="10dp"
+            android:hint="word"/>
 
 
     </LinearLayout>
