--- a/app/src/main/res/layout/new_vocab.xml
+++ b/app/src/main/res/layout/new_vocab.xml
@@ -60,4 +60,13 @@
         android:hint="Submit"
         android:layout_gravity="center"/>
 
+    <ProgressBar
+        android:id="@+id/pBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:indeterminate="true"
+        android:indeterminateTint="@color/colorPrimary"
+        android:visibility="gone"/>
+
 </LinearLayout>
