--- a/app/src/main/res/layout/expanded_screen.xml
+++ b/app/src/main/res/layout/expanded_screen.xml
@@ -20,16 +20,18 @@
 
     </LinearLayout>
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginTop="20dp">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Meaning"
-            android:textSize="30dp"
+            android:text="Definition"
+            android:textSize="26dp"
             android:layout_margin="10dp"/>
 
 
@@ -38,7 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="I am the meaning of the word above"
-            android:textSize="23dp"
+            android:textSize="20dp"
             android:layout_margin="10dp"/>
 
     </LinearLayout>
@@ -46,13 +48,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginTop="20dp">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Example"
-            android:textSize="30dp"
+            android:textSize="26dp"
             android:layout_margin="10dp"/>
 
 
@@ -61,7 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="I am an example of the word above"
-            android:textSize="23dp"
+            android:textSize="20dp"
             android:layout_margin="10dp"/>
 
     </LinearLayout>
