--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -57,19 +57,20 @@
             android:layout_height="wrap_content"
             android:layout_weight="2">
 
-            <EditText
+            <SearchView
                 android:id="@+id/search"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@android:string/search_go" />
-
-            <ImageView
-                android:id="@+id/search_it"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="10dp"
-                android:src="@drawable/ic_search_black_24dp" />
+                android:layout_height="wrap_content"/>
+
+<!--                <requestFocus />-->
+<!--            </SearchView>-->
+
+<!--            <ListView-->
+<!--                android:id="@+id/listView"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:layout_below="@+id/search"/>-->
+
         </RelativeLayout>
 
 
@@ -81,6 +82,7 @@
             android:hint="ADD" />
 
     </LinearLayout>
+
 
     <ScrollView
         android:layout_width="match_parent"
