--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="@color/cardview_dark_background"
         android:orientation="vertical">
 
         <TextView
@@ -78,8 +78,10 @@
             android:id="@+id/add_word"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@color/cardview_dark_background"
+            android:textColor="@color/white"
             android:layout_weight="0.5"
-            android:hint="ADD" />
+            android:text="ADD" />
 
     </LinearLayout>
 
