--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -90,6 +90,7 @@
     <color name="deep_red">#6c050c</color>
     <color name="gold">#d19b06</color>
     <color name="deep_brown">#4d2302</color>
+    <color name="white">#ffffff</color>
 
 
 </resources>
