--- a/app/src/main/res/layout/dict_words.xml
+++ b/app/src/main/res/layout/dict_words.xml
@@ -17,14 +17,16 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:id="@+id/word_layout"
-        android:elevation="10dp"
-        >
+        style="@style/EditTextStyle"
+        android:elevation="10dp">
 
         <TextView
             android:id="@+id/word"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20dp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
             android:layout_margin="10dp"
             android:hint="word"/>
 
