--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -69,6 +69,13 @@
             android:textColor="@color/cardview_dark_background"
             android:text="Log In"/>
 
+        <ProgressBar
+            android:id="@+id/progBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:layout_gravity="center"/>
+
     </LinearLayout>
 
     <TextView
